feat: innit with JS

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-native-neoversity",
   "license": "0BSD",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -16,9 +16,7 @@
     "react-native": "0.76.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
-    "typescript": "^5.3.3"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
