--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.27",
     "expo-font": "~13.0.3",
+    "expo-image-picker": "^16.0.4",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.1"
+    "react-native-svg": "^15.11.1",
+    "expo-camera": "~16.0.14",
+    "expo-media-library": "~17.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
