--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.1",
     "expo-camera": "~16.0.14",
-    "expo-media-library": "~17.0.5"
+    "expo-media-library": "~17.0.5",
+    "react-native-maps": "1.18.0",
+    "expo-location": "~18.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
