--- a/package.json
+++ b/package.json
@@ -10,25 +10,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "@reduxjs/toolkit": "^2.5.1",
     "expo": "~52.0.27",
+    "expo-camera": "~16.0.14",
     "expo-font": "~13.0.3",
     "expo-image-picker": "^16.0.4",
+    "expo-location": "~18.0.5",
+    "expo-media-library": "~17.0.5",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.2.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-maps": "1.18.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.1",
-    "expo-camera": "~16.0.14",
-    "expo-media-library": "~17.0.5",
-    "react-native-maps": "1.18.0",
-    "expo-location": "~18.0.5"
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
