--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-media-library": "~17.0.5",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.2.0",
+    "nanoid": "^5.0.9",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
