feat:expo publication

--- a/app.json
+++ b/app.json
@@ -19,13 +19,19 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.jakeko2012.reactnativeneoversity"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-font"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "f709efab-063c-49e4-88fc-e1a7e66dd557"
+      }
+    }
   }
 }
