--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.1",
     "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "expo-dev-client": "~5.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
